[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = "Test Project for Django lesons"
authors = ["mishablokhin <mishablokhin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
